# Project-HCH

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
.github/workflows/: ci.yml
application/: CMakeLists.txt
application/inc/: Application.hpp  EnemySpawnMessage.hpp  GameState.hpp  MenuState.hpp  Message.hpp  MessageFlag.hpp  MessageNetwork.hpp  MessageNode.hpp  MessageNodeInfo.hpp  MessageTopic.hpp  MessageTopicFlag.hpp  PauseState.hpp  PlayerActionMessage.hpp  SceneNode.hpp  State.hpp  StateStack.hpp  TestA.hpp  TestB.hpp  TestComponentPub.hpp  TestComponentSub.hpp  TestComponentSub2.hpp
application/inc/State/: GameState.hpp  MenuState.hpp  PauseState.hpp
application/src/: Application.cpp  EnemySpawnMessage.cpp  GameState.cpp  MenuState.cpp  Message.cpp  MessageFlag.cpp  MessageNetwork.cpp  MessageNode.cpp  MessageNodeInfo.cpp  MessageTopicFlag.cpp  PauseState.cpp  PlayerActionMessage.cpp  SceneNode.cpp  State.cpp  StateStack.cpp  TestA.cpp  TestB.cpp  TestComponentPub.cpp  TestComponentSub.cpp  TestComponentSub2.cpp  main.cpp
application/src/State/: GameState.cpp  MenuState.cpp  PauseState.cpp
docs/class_diagrams/: MessageNetwork.dio  State_Architecture.dio
docs/sequence_diagrams/: State_Architecture.dio
libs/core/: CMakeLists.txt
libs/core/inc/: Configuration.hpp  ConfigurationI.hpp  SceneNode.hpp
libs/core/inc/Messaging/: Message.hpp  MessageNetwork.hpp  MessageNode.hpp  MessageNodeInfo.hpp  MessageTypes.hpp
libs/core/inc/State/: State.hpp  StateStack.hpp  StateTypes.hpp
libs/core/src/: Configuration.cpp  SceneNode.cpp
libs/core/src/Messaging/: Message.cpp  MessageNetwork.cpp  MessageNode.cpp  MessageNodeInfo.cpp  MessageTypes.cpp
libs/core/src/State/: State.cpp  StateStack.cpp  StateTypes.cpp
libs/utility/: CMakeLists.txt
libs/utility/inc/: ConsoleLogger.hpp  LogRegistry.hpp  Logger.hpp  LoggerI.hpp  StringOperations.hpp  TextFileLogger.hpp
libs/utility/inc/Logging/: CommonLog.hpp  LogLevel.hpp  LogRegistry.hpp  Logger.hpp
libs/utility/inc/Logging/Sinks/: ColorConsoleSink.hpp  LogSinksI.hpp  TextFileSink.hpp
libs/utility/src/: ConsoleLogger.cpp  LogRegistry.cpp  Logger.cpp  StringOperations.cpp  TextFileLogger.cpp
libs/utility/src/Logging/: LogLevel.cpp  LogRegistry.cpp  Logger.cpp
libs/utility/src/Logging/Sinks/: ColorConsoleSink.cpp  TextFileSink.cpp
tests/: CMakeLists.txt  utility_ConsoleLogger_test.cc  utility_Logger_test.cc  utility_StringOperations_test.cc
unit_tests/: CMakeLists.txt
